--- a/src/style/_themes.scss
+++ b/src/style/_themes.scss
@@ -32,6 +32,7 @@
   --color-panel-divider: var(--color-panel-edge);
   --color-panel-edge: #bbb19f;
   --color-panel-header-hover: rgba(255, 255, 255, 0.25);
+  --color-panel-header-active: rgba(255, 255, 255, 0.45);
   --color-panel-icon: var(--color-panel-edge);
   --color-panel-inverse-active: color-mix(
     in srgb,
@@ -96,6 +97,7 @@
     transparent 75%
   );
   --color-panel-header-hover: rgba(255, 255, 255, 0.05);
+  --color-panel-header-active: rgba(255, 255, 255, 0.08);
   --color-panel-icon: var(--color-text-subtle);
   --color-sheet-header-background: rgba(255, 255, 255, 0.03);
   --compendium-sheet-header-background-color: color-mix(
