--- a/src/style/components/_base-effect.scss
+++ b/src/style/components/_base-effect.scss
@@ -1,5 +1,7 @@
 .active-effect-config {
-  .tab.automations, .teriock.tab.children, .teriock.tab.transformation {
+  .tab.automations,
+  .teriock.tab.children,
+  .teriock.tab.transformation {
     padding: 0;
   }
 }
